[FIX] trackers: Fix odd display effect in Chrome etc when a filename on the left column wraps and parts of it spil into the right column. Weird bootstrap class conflict...

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2472,6 +2472,7 @@ table.treetable tr.expanded span.indenter a {
   position: relative;
   clear: right;
   padding-right: 1.5em;
+  margin-bottom: 1em;
   font-size: 0.9em;
 }
 .tracker-item-files li img, .tracker-item-files li span {
